--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "NodeServer",
+  "name": "node-server",
   "version": "1.0.0",
   "description": "Simple server on nodejs",
   "main": "index.js",
