--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "compression": "^1.7.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongodb": "^3.2.2"
+  },
+  "devDependencies": {
+    "@types/mongodb": "^3.1.22"
   }
 }
