--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "node-server",
   "version": "1.0.0",
   "description": "Simple server on nodejs",
-  "main": "index.js",
+  "main": "server.js",
   "author": "Stanislau Shliakhtsich",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "webpack": "webpack",
-    "start": "node server.js",
-    "sv": "node-supervisor server.js"
+    "client": "cd client && yarn start",
+    "build": "cd client && yarn build",
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js localhost 3001"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "compression": "^1.7.2",
-    "express": "^4.16.3",
-    "mongodb": "^3.2.2"
+    "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "http-proxy-middleware": "^2.0.6",
+    "mongodb": "^4.7.0"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.1.22"
+    "@types/mongodb": "^4.0.6",
+    "nodemon": "^2.0.16"
   }
 }
