--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 # misc
 .DS_Store
 .env.local
+.env.prod
+.env.local-h
 .env.development.local
 .env.test.local
 .env.production.local
@@ -19,3 +21,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# sh
