--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "author": "Stanislau Shliakhtsich",
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "yarn": ">=1.22",
+    "node": ">=16.3.0"
+  },
   "scripts": {
+    "prebuild": "rimraf dist",
     "client:start": "cd client && yarn start",
-    "client:build": "cd client && yarn build",
+    "build": "cd client && yarn build",
     "server:start": "node server/index.js",
     "server:dev-mon": "cross-env dotenv -e .env.local nodemon server/index.js localhost 3001",
     "start:dev": "cross-env dotenv -e .env.local yarn server:start",
@@ -20,6 +25,7 @@
     "prettier:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
+    "rimraf": "^3.0.2",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
