--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@sentry/react": "^7.16.0",
+    "@sentry/tracing": "^7.16.0",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "@testing-library/jest-dom": "^5.16.4",
