--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "prettier:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
-    "rimraf": "^3.0.2",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
-    "dotenv-cli": "^6.0.0",
     "dotenv": "^16.0.1",
+    "dotenv-cli": "^6.0.0",
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
-    "mongodb": "^4.8.1"
+    "mongodb": "^4.8.1",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.6",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.7.1",
     "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.7.1"
   }
 }
