--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@sentry/tracing": "^7.16.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@tanstack/react-query": "^4.13.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
@@ -21,7 +22,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-highlight-words": "^0.18.0",
-    "react-query": "^3.39.2",
     "react-scripts": "5.0.1",
     "typescript": "4.6.4",
     "web-vitals": "^3.0.4"
