--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,11 @@
     "react-highlight-words": "^0.18.0",
     "react-scripts": "5.0.1",
     "typescript": "4.6.4",
-    "web-vitals": "^3.0.4"
+    "web-vitals": "^3.0.4",
+    "cross-env": "^7.0.3"
   },
   "scripts": {
+    "start:prod": "cross-env REACT_APP_API_URL=https://my-film-list.onrender.com/api react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
