--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
