--- a/client/package.json
+++ b/client/package.json
@@ -2,21 +2,22 @@
   "name": "my-film-list-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3030",
   "dependencies": {
-    "@headlessui/react": "^1.7.3",
-    "@heroicons/react": "^2.0.12",
-    "@sentry/react": "^7.16.0",
-    "@sentry/tracing": "^7.16.0",
+    "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
+    "@sentry/react": "^7.17.4",
+    "@sentry/tracing": "^7.17.4",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@tanstack/react-query": "^4.13.0",
+    "@tanstack/react-query": "^4.14.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.7",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
