--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "prettier:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "dependencies": {
-    "cors": "^2.8.5",
+    "@sentry/node": "^7.17.4",
+    "@sentry/tracing": "^7.17.4",
     "body-parser": "^1.20.1",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^6.0.0",
@@ -38,7 +40,7 @@
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.6",
-    "eslint": "^8.26.0",
+    "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
