--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3030",
   "dependencies": {
+    "@auth0/auth0-react": "^1.12.0",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "@sentry/react": "^7.17.4",
@@ -19,13 +20,14 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
+    "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "react-highlight-words": "^0.18.0",
     "react-scripts": "5.0.1",
     "typescript": "4.6.4",
-    "web-vitals": "^3.0.4",
-    "cross-env": "^7.0.3"
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start:local-render": "cross-env REACT_APP_API_URL=https://my-film-list.onrender.com react-scripts start",
