--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "engines": {
     "yarn": ">=1.22",
-    "node": ">=16.3.0"
+    "node": ">=16.3.0 <= 18.12.0"
   },
   "scripts": {
     "prebuild": "rimraf ./client/build",
