--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-film-list-client",
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3030",
