--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "node-server",
+  "name": "my-film-list-server",
   "version": "1.0.0",
-  "description": "Simple server on nodejs",
-  "main": "server.js",
+  "description": "My film list backend",
+  "main": "server.ts",
   "author": "Stanislau Shliakhtsich",
   "license": "MIT",
-  "type": "module",
   "engines": {
     "yarn": ">=1.22",
     "node": ">=16.3.0 <= 18.12.0"
@@ -14,13 +13,14 @@
     "prebuild": "rimraf ./client/build",
     "client:start": "cd client && yarn start",
     "build": "cd client && yarn install && yarn build",
-    "server:start": "node server/index.js",
-    "server:dev-mon": "cross-env dotenv -e .env.local nodemon server/index.js",
-    "start:dev": "cross-env dotenv -e .env.local yarn server:start",
-    "start:dev-render": "cross-env dotenv -e .env.local-render yarn server:start",
-    "start:prod": "cross-env yarn server:start",
-    "lint": "eslint \"{src,apps,client,test}/**/*.ts\"",
-    "lint:fix": "eslint --fix \"{src,apps,client,test}/**/*.ts\"",
+    "server:build": "tsc",
+    "server:check": "tsc --noemit",
+    "server:start": "node ./server/dist/index.js",
+    "server:dev-mon": "cross-env dotenv -e .env.local nodemon --exec ts-node ./server/index.ts",
+    "server:dev": "cross-env dotenv -e .env.local ts-node ./server/index.ts",
+    "server:prod": "cross-env yarn server:start",
+    "lint": "eslint \"{server,apps,client,test}/**/*.ts\"",
+    "lint:fix": "eslint --fix \"{server,apps,client,test}/**/*.ts\"",
     "prettier:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "prettier:fix": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
@@ -34,13 +34,16 @@
     "dotenv": "^16.0.3",
     "dotenv-cli": "^6.0.0",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.2.0",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^4.11.0",
     "rimraf": "^3.0.2",
-    "express-oauth2-jwt-bearer": "^1.2.0"
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/mongodb": "^4.0.6",
+    "@types/node": "^18.11.9",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -48,6 +51,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^2.0.20",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1"
   }
 }
