--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "node": ">=16.3.0 <= 18.12.0"
   },
   "scripts": {
-    "prebuild": "rimraf ./client/build",
+    "prebuild": "rimraf ./client/build ./",
     "client:start": "cd client && yarn start",
     "build": "cd client && yarn install && yarn build",
     "server:build": "tsc",
@@ -41,6 +41,8 @@
     "typescript": "^4.9.3"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^18.11.9",
