--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     ]
   },
   "prettier": "@config/prettier-config",
+  "dependencies": {
+    "lerna": "^6.1.0"
+  },
   "devDependencies": {
     "rimraf": "^3.0.2",
     "@config/prettier-config": "*",
     "concurrently": "^7.6.0",
     "husky": "^8.0.2",
-    "lerna": "^6.1.0",
     "lint-staged": "^13.1.0",
     "patch-package": "^6.5.0",
     "sort-package-json": "^2.1.0"
