--- a/apps/server-express/package.json
+++ b/apps/server-express/package.json
@@ -10,7 +10,7 @@
     "node": ">=16.3.0 <= 18.12.0"
   },
   "scripts": {
-    "prebuild": "rimraf ./dist",
+    "prebuild": "rimraf ./dist && yarn && cd ../../ && yarn && yarn build:libs",
     "build": "tsc",
     "check": "tsc --noemit",
     "start": "node ./dist/index.js",
