--- a/libs/Apm/tsconfig.eslint.json
+++ b/libs/Apm/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*.ts*", ".eslintrc.js", "index.ts"],
+  "include": ["src/**/*.ts*", ".eslintrc.js"],
   "exclude": ["node_modules"]
 }
